--- a/templates/one-ec2-PARIS.yaml
+++ b/templates/one-ec2-PARIS.yaml
@@ -91,9 +91,8 @@ Resources:
             cd ..
             cd nifi-1.17.0/ 
             bin/nifi.sh start
-            echo "hello" > /home/ec2-user/nifi-credentials.info 
-            chmod 777  /home/ec2-user/nifi-credentials.info  
-            cat /home/ec2-user/nifi-1.17.0/logs/nifi-ap*.log | grep Generated > /home/ec2-user/nifi-credentials.info
+            echo "sudo touch cred.info | sudo chmod 777 cred.info |  sudo cat /home/ec2-user/nifi-1.17.0/logs/nifi-ap*.log | grep Generated > cred.info" > get_nifi_creds.sh
+            chmod +x get_nifi_creds.sh
             cd ..
             mkdir data
             mkdir data/history
